Hold my items fix
# Conflicts:
#	build.gradle
#	src/main/java/net/abraxator/moresnifferflowers/client/ModColorHandler.java